# paper_radar

./: .env.example  .gitignore  README.md  config.example.yaml  journals.yaml  pyproject.toml  requirements.txt
.github/workflows/: daily-paper-radar.yml
paper_radar/: analyzer.py  config.py  mailer.py  main.py  models.py  utils.py
paper_radar/fetchers/: __init__.py  crossref.py  europepmc.py
paper_radar/reports/: docx_builder.py
paper_radar/storage/: sqlite_store.py
