[project]
name = "paper-radar"
version = "0.1.0"
description = "Daily journal paper radar that generates a Word report and emails it."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "python-docx>=1.1.2",
  "PyYAML>=6.0.2",
  "openai>=1.40.0",
]

[tool.setuptools.packages.find]
include = ["paper_radar*"]
